--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "hop-message",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "routing message for hop",
   "type": "module",
-  "bin": "src/index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "test": "mocha test/*.*"
